--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.4",
     "canvas-select": "^2.22.0",
     "element-plus": "^2.8.0",
+    "pinia": "^2.2.4",
+    "pinia-plugin-persistedstate": "^4.0.2",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
